# LearnLibreOffice

./: .clang-format  CMakeLists.txt  slideshow.md
LearnCairo/: CMakeLists.txt  README.md  hello_pdf.c  taichi.c
LearnGTK/: CMakeLists.txt  example-0.c  example-1.c  example-2.c  example-3.c
LearnGstreamer/: CMakeLists.txt  basic-tutorial-1.c
