add_executable(example-0 example-0.c)
target_link_libraries(example-0 ${GTK4_LINK_LIBRARIES})

add_executable(example-1 example-1.c)
target_link_libraries(example-1 ${GTK4_LINK_LIBRARIES})

add_executable(example-2 example-2.c)
target_link_libraries(example-2 ${GTK4_LINK_LIBRARIES})

add_executable(example-3 example-3.c)
target_link_libraries(example-3 ${GTK4_LINK_LIBRARIES})
